# auth-proxy-gl

./: .gitignore  Cargo.toml  Cross.toml  README.md  cliff.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: release.yml
src/: args.rs  config.rs  lib.rs  main.rs  state.rs
src/api/: mod.rs  root.rs  sessions_server.rs
src/injector/types/: request.rs  response.rs
src/launcher/: error.rs  mod.rs  socket.rs
src/launcher/socket/: error.rs  mod.rs
src/launcher/socket/events/: input.rs  output.rs
src/launcher/types/: request.rs  response.rs
src/routes/: api.rs  mod.rs  root.rs  sessionserver.rs  sessionserver_session_minecraft.rs
