[package]
name = "auth-proxy-gl"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.9"
base64 = "0.22.1"
dashmap = "6.1.0"
figment = { version = "0.10.19", features = ["json"] }
futures = "0.3.31"
futures-util = "0.3.31"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["full"] }
tokio-tungstenite = "0.24.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
